--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1",
     "@hackmd/api": "^2.5.0",
+    "@js-temporal/polyfill": "^0.5.1",
     "ejs": "^3.1.10",
-    "luxon": "^1.28.1",
     "safe-parse-list": "^0.1.1"
   },
   "devDependencies": {
